# music-album-guide

./: .gitignore  LICENSE  Makefile  README.md  default.env  docker-compose.yml  postgres-local.yml  pyproject.toml
backend/: Dockerfile  Makefile  entrypoint.sh  pyproject.toml  setup.cfg
backend/backend/: settings.py  urls.py
backend/core/: admin.py  api.py  models.py  serializers.py  services.py  urls.py  views.py
backend/core/management/commands/: albums.csv  artists.csv  populate_db.py  tracks.csv
backend/core/migrations/: 0001_initial.py
frontend/: Dockerfile  Makefile  entrypoint.sh  pyproject.toml
frontend/client/: client.py
frontend/core/: serializers.py  services.py  urls.py  views.py
frontend/frontend/: settings.py  urls.py
frontend/frontend/static/: styles.css
frontend/frontend/templates/core/: albums.html  backend_error.html
nginx/: default.conf
source_data/: albums.csv  artists.csv  tracks.csv
