[tool.poetry]
name = "music-album-guide"
version = "0.1.0"
description = ""
authors = ["Alexander Lyotov <sippie84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
psycopg2-binary = "^2.9.5"
drf-yasg = "^1.21.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.17.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
